Update server with FFL-Testing
