# docs/swagger.json
@@ -243,7 +243,9 @@
                         "enum": [
                             "default",
                             "middle",
-                            "high"
+                            "high",
+                            "very_high",
+                            "low"
                         ],
                         "type": "string",
                         "description": "Resource Type",
@@ -268,7 +270,8 @@
                             "default",
                             "wiiu",
                             "switch",
-                            "ffliconwithbody"
+                            "ffliconwithbody",
+                            "3ds"
                         ],
                         "type": "string",
                         "description": "Body Type",
@@ -298,7 +301,9 @@
                             "opa_only",
                             "xlu_only",
                             "mask_only",
-                            "xlu_depth_mask"
+                            "xlu_depth_mask",
+                            "body_only",
+                            "body_inv_depth_mask"
                         ],
                         "type": "string",
                         "description": "Draw Stage Mode",
@@ -596,7 +601,9 @@
                         "enum": [
                             "default",
                             "middle",
-                            "high"
+                            "high",
+                            "very_high",
+                            "low"
                         ],
                         "type": "string",
                         "description": "Resource Type",
@@ -621,7 +628,8 @@
                             "default",
                             "wiiu",
                             "switch",
-                            "ffliconwithbody"
+                            "ffliconwithbody",
+                            "3ds"
                         ],
                         "type": "string",
                         "description": "Body Type",
@@ -651,7 +659,9 @@
                             "opa_only",
                             "xlu_only",
                             "mask_only",
-                            "xlu_depth_mask"
+                            "xlu_depth_mask",
+                            "body_only",
+                            "body_inv_depth_mask"
                         ],
                         "type": "string",
                         "description": "Draw Stage Mode",
@@ -949,7 +959,9 @@
                         "enum": [
                             "default",
                             "middle",
-                            "high"
+                            "high",
+                            "very_high",
+                            "low"
                         ],
                         "type": "string",
                         "description": "Resource Type",
@@ -974,7 +986,8 @@
                             "default",
                             "wiiu",
                             "switch",
-                            "ffliconwithbody"
+                            "ffliconwithbody",
+                            "3ds"
                         ],
                         "type": "string",
                         "description": "Body Type",
@@ -1004,7 +1017,9 @@
                             "opa_only",
                             "xlu_only",
                             "mask_only",
-                            "xlu_depth_mask"
+                            "xlu_depth_mask",
+                            "body_only",
+                            "body_inv_depth_mask"
                         ],
                         "type": "string",
                         "description": "Draw Stage Mode",
